// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-dividendes > DFS 1`] = `
"salarié . cotisations . assiette: 1802
salarié . cotisations . exonérations . réduction générale: 523
salarié . cotisations . exonérations . réduction générale . imputation chômage: 73
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 108
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 415"
`;

exports[`calculate simulations-dividendes > DFS 2`] = `
"salarié . cotisations . assiette: 1802
salarié . cotisations . exonérations . réduction générale: 523
salarié . cotisations . exonérations . réduction générale . imputation chômage: 73
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 108
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 415"
`;

exports[`calculate simulations-dividendes > DFS 3`] = `
"salarié . cotisations . assiette: 1802
salarié . cotisations . exonérations . réduction générale: 575
salarié . cotisations . exonérations . réduction générale . imputation chômage: 73
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 108
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 467"
`;

exports[`calculate simulations-dividendes > DFS 4`] = `
"salarié . cotisations . assiette: 1802
salarié . cotisations . exonérations . réduction générale: 575
salarié . cotisations . exonérations . réduction générale . imputation chômage: 73
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 108
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 467"
`;

exports[`calculate simulations-dividendes > DFS 5`] = `
"salarié . cotisations . assiette: 1802
salarié . cotisations . exonérations . réduction générale: 575
salarié . cotisations . exonérations . réduction générale . imputation chômage: 73
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 108
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 467"
`;

exports[`calculate simulations-dividendes > JEI 1`] = `
"salarié . cotisations . assiette: 1900
salarié . cotisations . exonérations . réduction générale: null
salarié . cotisations . exonérations . réduction générale . imputation chômage: null
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: null
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: null"
`;

exports[`calculate simulations-dividendes > effectif 1`] = `
"salarié . cotisations . assiette: 1900
salarié . cotisations . exonérations . réduction générale: 523
salarié . cotisations . exonérations . réduction générale . imputation chômage: 66
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 98
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 425"
`;

exports[`calculate simulations-dividendes > effectif 2`] = `
"salarié . cotisations . assiette: 1900
salarié . cotisations . exonérations . réduction générale: 530
salarié . cotisations . exonérations . réduction générale . imputation chômage: 66
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 98
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 431"
`;

exports[`calculate simulations-dividendes > heures complémentaires 1`] = `
"salarié . cotisations . assiette: 1900
salarié . cotisations . exonérations . réduction générale: 483
salarié . cotisations . exonérations . réduction générale . imputation chômage: 61
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 91
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 392"
`;

exports[`calculate simulations-dividendes > heures supplémentaires 1`] = `
"salarié . cotisations . assiette: 1900
salarié . cotisations . exonérations . réduction générale: 607
salarié . cotisations . exonérations . réduction générale . imputation chômage: 77
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 114
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 493"
`;

exports[`calculate simulations-dividendes > salaire 1`] = `
"salarié . cotisations . assiette: 100
salarié . cotisations . exonérations . réduction générale: 32
salarié . cotisations . exonérations . réduction générale . imputation chômage: 4
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 6
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 26"
`;

exports[`calculate simulations-dividendes > salaire 2`] = `
"salarié . cotisations . assiette: 250
salarié . cotisations . exonérations . réduction générale: 80
salarié . cotisations . exonérations . réduction générale . imputation chômage: 10
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 15
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 65"
`;

exports[`calculate simulations-dividendes > salaire 3`] = `
"salarié . cotisations . assiette: 500
salarié . cotisations . exonérations . réduction générale: 160
salarié . cotisations . exonérations . réduction générale . imputation chômage: 20
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 30
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 130"
`;

exports[`calculate simulations-dividendes > salaire 4`] = `
"salarié . cotisations . assiette: 750
salarié . cotisations . exonérations . réduction générale: 240
salarié . cotisations . exonérations . réduction générale . imputation chômage: 30
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 45
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 194"
`;

exports[`calculate simulations-dividendes > salaire 5`] = `
"salarié . cotisations . assiette: 1000
salarié . cotisations . exonérations . réduction générale: 319
salarié . cotisations . exonérations . réduction générale . imputation chômage: 40
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 60
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 259"
`;

exports[`calculate simulations-dividendes > salaire 6`] = `
"salarié . cotisations . assiette: 1250
salarié . cotisations . exonérations . réduction générale: 399
salarié . cotisations . exonérations . réduction générale . imputation chômage: 51
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 75
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 324"
`;

exports[`calculate simulations-dividendes > salaire 7`] = `
"salarié . cotisations . assiette: 1500
salarié . cotisations . exonérations . réduction générale: 479
salarié . cotisations . exonérations . réduction générale . imputation chômage: 61
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 90
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 389"
`;

exports[`calculate simulations-dividendes > salaire 8`] = `
"salarié . cotisations . assiette: 2000
salarié . cotisations . exonérations . réduction générale: 470
salarié . cotisations . exonérations . réduction générale . imputation chômage: 60
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 88
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 382"
`;

exports[`calculate simulations-dividendes > salaire 9`] = `
"salarié . cotisations . assiette: 2500
salarié . cotisations . exonérations . réduction générale: 204
salarié . cotisations . exonérations . réduction générale . imputation chômage: 26
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 38
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 165"
`;

exports[`calculate simulations-dividendes > salaire 10`] = `
"salarié . cotisations . assiette: 3000
salarié . cotisations . exonérations . réduction générale: 0
salarié . cotisations . exonérations . réduction générale . imputation chômage: 0
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 0
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 0"
`;

exports[`calculate simulations-dividendes > stage 1`] = `
"salarié . cotisations . assiette: 1900
salarié . cotisations . exonérations . réduction générale: 523
salarié . cotisations . exonérations . réduction générale . imputation chômage: 66
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 98
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 425"
`;

exports[`calculate simulations-dividendes > temps partiel 1`] = `
"salarié . cotisations . assiette: 1900
salarié . cotisations . exonérations . réduction générale: 392
salarié . cotisations . exonérations . réduction générale . imputation chômage: 50
salarié . cotisations . exonérations . réduction générale . imputation retraite complémentaire: 74
salarié . cotisations . exonérations . réduction générale . imputation sécurité sociale: 318"
`;
